# TrackMaker-rs

./: .gitignore  .gitmodules  Cargo-simple.toml  Cargo.toml  LICENSE  README.md  bin_txt_converter.py  check_tun.rs  compare_detector_output.py  debug_bit_packing.py  debug_modem_mapping.py  debug_python_recv.py  debug_rust_vs_python.py  decoded_output.txt  elinks.sh  flake.nix  package.json  pnpm-lock.yaml  run_amodem.sh  run_on_mac.sh  rustfmt.toml  simple_test
.cursor/rules/: dontstop.mdc  dquote.mdc
.github/workflows/: deploy.yml
assets/: girlmaches.txt  psk.cxx  sample.flac  think-different.txt
assets/proj1/: check.py  conv.py
docs/: CLI_USAGE.md  frequency_drift_analysis.ipynb  index.md  sample-rate-guide.md
docs/.vitepress/: config.mts
docs/proj/: SamplePHY.m  proj1.md  report.md
examples/: ask.rs  playback.rs  record.rs  reed_solomon.rs  text_test.rs  transmission.rs  tune.rs  waverec.rs
git-hooks/: pre-commit
src/: lib.rs  main.rs  main_project1.rs  simple_test.rs
src/acoustic/: b4b5.rs  config.rs  decode.rs  encode.rs  io.rs  mod.rs  preamble.rs  similarity.rs  sinwave.rs
src/amodem/: common.rs  config.rs  detect.rs  dsp.rs  equalizer.rs  framing.rs  main_recv.rs  mod.rs  recv.rs  sampling.rs  send.rs
src/audio/: codec.rs  decoder.rs  fsk.rs  mod.rs  ofdm.rs  psk.rs  psk_test.rs  recorder.rs
src/device/: jack.rs  mod.rs
src/error_correction/: mod.rs  reed_solomon.rs
src/mac/: acoustic_interface.rs  csma.rs  ip_interface.rs  mod.rs  transfer.rs  types.rs
src/net/: arp.rs  fragmentation.rs  icmp.rs  (+7 more)
tests/: acoustic_roundtrip.rs
tools/: README.md  pyproject.toml  sample.py  test.py
(+18 files in other folders)
