[package]
name = "trackmaker-rs"
version = "0.0.1"
edition = "2024"

[dependencies]
jack = "0.13.3"
indicatif = "0.17"
symphonia = "0.5.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-channel = "0.5.15"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
num-complex = "0.4"
crc32fast = "1.4"
clap = { version = "4.0", features = ["derive"] }
