[package]
name = "trackmaker-rs"
version = "0.0.1"
edition = "2024"
default-run = "trackmaker-rs"

[dependencies]
jack = "0.13.3"
indicatif = "0.17"
symphonia = "0.5.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-channel = "0.5.15"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
rng = "0.1.0"
rand = "0.9.2"
dialoguer = "0.12.0"
hound = "3.5.1"
ringbuf = "0.4"
ctrlc = "3.4"